# refractr

./: .doit.db.db  .flux.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  CODEOWNERS  Dockerfile  LOCALES  Makefile  README.md  SRE_INFO.md  dev-refractr.yml  docker-compose.yml  dodo.py  missing-rewrites.conf  missing_server_names  nginx.conf  prod-refractr.yml  prod-refractr.yml.bak  pyproject.toml  refractr.yml  requirements.in  requirements.txt  stage-refractr.yml
.github/: pull_request_template.md
.github/workflows/: build_and_push_to_gar.yml  pre-commit.yaml  publish.yml  (+1 more)
docs/: SRE_INFO.md  deploy.py  refractr-architecture.md  traffic.py
examples/: complex-redirect.md  complex-redirect.yml  complex-rewrite-with-if-and-redirect.md  complex-rewrite-with-if-and-redirect.yml  complex-rewrite.md  complex-rewrite.yml  raw-nginx.md  raw-nginx.yml  simple-http-to-https.md  simple-http-to-https.yml  simple-multiple-sources.md  simple-multiple-sources.yml  simple-single-source.md  simple-single-source.yml
k8s/: helm-rbac.yaml  namespace.yaml  refractr.yaml  serviceaccount.yaml
refractr/: Dockerfile  base.py  cfg.py  complex.py  exceptions.py  generate.py  ingress.yaml.template  nginx.py  redirect.py  refractr.py  refractr.sh  refractr.yml  refractr.yml.bak  rewrite.py  schema.json  schema.yml  simple.py  url.py  utils.py  validate.py
refractr-cd/: Dockerfile  ingress.yaml.template
src/: nginx  refractr.py  utils.py
telegraf/: telegraf.conf
tests/: test_docker.py  test_refractr.py
tf/: main.tf  outputs.tf  state.tf
(+23 files in other folders)
